objects/ASI_CRM_Blind_Bonus__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Blind_Bonus_Amount_Per_9L__c</fullName>
        <label>Blind Bonus Amount (per 9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Blind_Bonus_Amount_per_Case__c</fullName>
        <label>Blind Bonus Amount (per Case)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM SG Wholesaler</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (SG)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Blind Bonus</relationshipLabel>
        <relationshipName>Blind_Bonus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Default_Est_Blind_Bonus_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default for Est Blind Bonus Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand_Code__c</fullName>
        <formula>ASI_CRM_Sub_brand__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM SG Wholesaler</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG Sub-brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Blind Bonus</relationshipLabel>
        <relationshipName>Blind_Bonus</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Blind Bonus</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SG_Wholesaler</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Sub_brand__c</columns>
        <columns>ASI_CRM_Blind_Bonus_Amount_Per_9L__c</columns>
        <columns>ASI_CRM_Blind_Bonus_Amount_per_Case__c</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_Default_Est_Blind_Bonus_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Blind_Bonus__c.ASI_CRM_SG_Wholesaler</value>
        </filters>
        <label>SG Wholesaler</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BlindBonus-{0000}</displayFormat>
        <label>Blind Bonus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blind Bonus</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Wholesaler</fullName>
        <active>true</active>
        <label>ASI CRM SG Wholesaler</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_SG_Amount_9L_Or_Case</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  RecordType.DeveloperName = &apos;ASI_CRM_SG_Wholesaler&apos;,
  OR (
    AND (
      ISBLANK( ASI_CRM_Blind_Bonus_Amount_Per_9L__c ) ,
      ISBLANK( ASI_CRM_Blind_Bonus_Amount_per_Case__c ) 
    ),
    AND (
      NOT(ISBLANK( ASI_CRM_Blind_Bonus_Amount_Per_9L__c )) ,
      NOT(ISBLANK( ASI_CRM_Blind_Bonus_Amount_per_Case__c )) 
    )
  )
)</errorConditionFormula>
        <errorMessage>Please choose either this is a amount per 9L or Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_Wholesaler_Or_DefaultBB</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  RecordType.DeveloperName = &apos;ASI_CRM_SG_Wholesaler&apos;,
  OR (
    AND (
      NOT( ASI_CRM_Default_Est_Blind_Bonus_Amount__c ),
      ISBLANK( ASI_CRM_Customer__c )
    ),
    AND (
      ASI_CRM_Default_Est_Blind_Bonus_Amount__c,
      NOT(ISBLANK( ASI_CRM_Customer__c ))
    )
  )
)</errorConditionFormula>
        <errorMessage>Please choose either this is a default or wholesaler&apos;s blind bonus rate.</errorMessage>
    </validationRules>
</CustomObject>